# Messanger

./: .$Plotniy_Messanger.drawio.bkp  .gitignore  Plotniy_Messanger.drawio
Client/: CMakeLists.txt  Client.cpp  Client.h  Message_Factory_Config.h  main.cpp
Client/Handlers/: MessengerHandler.cpp  MessengerHandler.h  ServerHandler.cpp  ServerHandler.h  User_ServerHandler_Mediator.cpp  User_ServerHandler_Mediator.h
Client/Interface/: UserInterface.cpp  UserInterface.h
Client/Model/Networking/Message_Queue/: Message_From_Server_Queue.cpp  Message_From_Server_Queue.h
Client/Model/Networking/Socket/: Socket.cpp  Socket.h  Socket_Manager.cpp  Socket_Manager.h
Client/Modules/: CMakeLists.txt
Client/Modules/Model/: CMakeLists.txt  Thread_Pool.cpp  Thread_Pool.h
Client/Modules/Model/Networking/: CMakeLists.txt
Client/Modules/Model/Networking/Message_Queue/: CMakeLists.txt  Message_From_Server_Queue.cpp  Message_From_Server_Queue.h  Message_To_Server_Queue.cpp  Message_To_Server_Queue.h
Client/Modules/Model/Networking/Socket/: CMakeLists.txt  Socket.cpp  Socket.h  Socket_Manager.cpp  Socket_Manager.h
Client/Modules/Tools/: CMakeLists.txt  Json_Tools.cpp  Json_Tools.h  OpenSSL_Tools.cpp  TFactory.cpp  TFactory.h
Client/Modules/Tools/Containers/: CMakeLists.txt  TContainer_Base.h  TContainer_Multimap.h  TContainer_Queue.h  TPriority_Queue.h
Client/Modules/Tools/Synchronized/: CMakeLists.txt  Conditional_Variable.cpp  Mutex.h
Client/Modules/View/: CMakeLists.txt  Main_View.cpp  Main_View.h
Client/Modules/View/Chats_View/: CMakeLists.txt  Chats_View.cpp  Chats_View.h
Client/Modules/View/Enter_View/: Login.h  Register.h
Client/Modules/View_Model/: CMakeLists.txt
Client/Modules/View_Model/Authentication_View_Model/: Authorization_Data.cpp  Registration_Data.h
Client/Modules/View_Model/Enter_View_Model/: Authorization_View_Model.h  I_View_Model.h  Registration_View_Model.h
Client/ServerHandler/: ServerHandler.cpp  ServerHandler.h
Client/Tools/: Json_Tools.cpp
Client/Tools/Containers/: Container_Vector.h
Client/Tools/Synchronized/: Conditional_Variable.h  Mutex.cpp
Client/User/: User.cpp  User.h
Client/View/Authentication_View/: Login.h
Client/View_Model/Authentication_View_Model/: Authentication_Data.cpp  Authentication_Data.h  Registration_Data.cpp
Server/: .dockerignore  CMakeLists.txt  Dockerfile  Message_Factory_Config.h  Pool_Connection_Config.h  Server.cpp  Server.h  Task_Factory_Config.h  ThreadPool.cpp  ThreadPool.h  docker_for_github_actions.dockerfile  main.cpp
Server/Business_Logic/: CMakeLists.txt
Server/Business_Logic/Database/: CMakeLists.txt  Database_Connector.cpp  Database_Connector.h  Database_Manager.cpp  Database_Manager.h  Query_Executor.cpp  Query_Executor.h
Server/Business_Logic/Task/: CMakeLists.txt  Task.h  Task_Factory.cpp  Task_Factory.h
Server/Business_Logic/Task/Task_Type/: Authorization_Task.cpp  Authorization_Task.h  CMakeLists.txt  Registration_Task.cpp  Registration_Task.h
Server/ClientHandler/: ClientHandler.cpp  ClientHandler.h
Server/Database/PG_16_202307071/16399/: 112  113  1247  1247_fsm  1247_vm  1249  1249_fsm  1249_vm  1255  1255_fsm  1255_vm  1259  1259_fsm  1259_vm  14881  14881_fsm  14881_vm  14885  14886  14886_fsm  14886_vm  14890  14891  14891_fsm  14891_vm  14895  14896  14896_fsm  14896_vm  14900  16407  16421  16426  16428  16434  174  175  2224  2228  2337  (+197 more)
Server/Modules/: CMakeLists.txt
Server/Modules/Business_Logic/: CMakeLists.txt
Server/Modules/Business_Logic/Database/: CMakeLists.txt  Database_Connector.cpp  Database_Connector.h  Query_Executor.cpp  Query_Executor.h  Repository.cpp  Repository.h
Server/Modules/Business_Logic/Database/DataMappers/: CMakeLists.txt  PasswordMapper.cpp  PasswordMapper.h  UserMapper.cpp  UserMapper.h
Server/Modules/Business_Logic/Task/: CMakeLists.txt  Task.h  Task_Factory.cpp  Task_Factory.h
Server/Modules/Network/: CMakeLists.txt
Server/Modules/Network/Protocols/: CMakeLists.txt  IMessage_Builder.h
Server/Modules/Network/Socket/: CMakeLists.txt  Client_Manager.cpp  Client_Manager.h  ISocket.h
Server/Modules/Thread/: CMakeLists.txt  Thread.cpp  Thread.h
Server/Modules/Thread/Pool/: Task_Container.cpp  Task_Container.h  Thread_Pool.cpp  Thread_Pool.h
Server/Modules/Tools/: CMakeLists.txt  Json_Tools.cpp  Json_Tools.h  OpenSSL_Tools.cpp  OpenSSL_Tools.h
Server/Modules/Tools/Containers/: CMakeLists.txt  Container_Vector.h  TContainer_Base.h  TContainer_Multimap.h  TContainer_Queue.h  TPriority_Queue.h
Server/Modules/Tools/Synchronized/: Conditional_Variable.cpp  Conditional_Variable.h  Mutex.cpp  Mutex.h
Server/Network/: CMakeLists.txt
Server/Network/Protocols/: IMessage_Builder.h
Server/Network/Protocols/Protocols_Type/: Authorization_Message.cpp  Authorization_Message.h  CMakeLists.txt  Registration_Message.cpp  Registration_Message.h
Server/Network/Socket/: CMakeLists.txt  Client_Manager.cpp  Client_Manager.h  ISocket.h
Server/Network/Socket/Client_Socket/: Client_Socket.cpp  Client_Socket.h  Client_Socket_Manager.cpp  Client_Socket_Manager.h
Server/Network/Socket/Server_Socket/: Server_Socket.cpp  Server_Socket.h
Server/Tests/: CMakeLists.txt
Server/Tests/googletest-1.14.0/docs/: index.md  primer.md  quickstart-cmake.md
Server/Tests/googletest-1.14.0/googlemock/: CMakeLists.txt
Server/Tests/googletest-1.14.0/googletest/: CMakeLists.txt  README.md
Server/Tests/tests/: all_test.cpp
Server/Tests/tests/BusinessLogicTest/: CMakeLists.txt
Server/Tests/tests/NetworkTest/: CMakeLists.txt
Server/Tests/tests/ThreadTest/: CMakeLists.txt  thread_test.cpp  thread_test.h
Server/Thread/: CMakeLists.txt  Thread.cpp  Thread.h
Server/Thread/Pool/: Task_Container.cpp  Task_Container.h  Thread_Pool.cpp  Thread_Pool.h
Server/Tools/: CMakeLists.txt  Json_Tools.cpp  Json_Tools.h  OpenSSL_Tools.cpp  OpenSSL_Tools.h
Server/Tools/Containers/: Container_Vector.h  TContainer_Base.h  TContainer_Queue.h
Server/Tools/Synchronized/: CMakeLists.txt  Conditional_Variable.cpp
(+89 files in other folders)
